Fixed broken css

--- a/src/blackwall/UI.css
+++ b/src/blackwall/UI.css
@@ -10,12 +10,13 @@
     width: 100%
 }
 
-ModalScreen {
-    opacity: 50;
+ConfirmationScreen {
+    opacity: 50%;
     align: center middle;
 }
 
 WarningScreen {
+    opacity: 50%;
     align: center middle;
 }
 
